[gd_scene load_steps=2 format=3 uid="uid://ai_config_menu"]

[ext_resource type="Script" path="res://scripts/AIConfigMenu.gd" id="1_ai_config_menu"]

[node name="AIConfigMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_ai_config_menu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "AI Opponent Configuration"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="AttackToggle" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Enable Attacks"
button_pressed = true

[node name="ParryToggle" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Enable Auto Parry"
button_pressed = true

[node name="MovementToggle" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Enable Movement"
button_pressed = true

[node name="BasicAttackToggle" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Enable Basic Attack"
button_pressed = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ApplyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Apply Configuration"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"
